--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -45,7 +45,7 @@ const ftLink = isHome
   <a id="btt" class="hidden fixed bottom-0 right-0 mb-4 mr-4 text-white border border-accent-600 hover:bg-white hover:text-accent hover:border-accent no-underline px-6 py-1 bg-accent shadow-md" href="#top" title="Back to Top">UP</a>
 </div>
 <div class="fixed bottom-0 left-0 m-6">
-  <a href="https://github.com/stashsphere" target="_blank" rel="noopener" title="StashSphere @ GitHub" class="block rounded-full bg-black text-accent hover:bg-white hover:text-black shadow-md p-4">
+  <a href="https://github.com/stashsphere" target="_blank" rel="noopener" title="StashSphere @ GitHub" class="block rounded-full bg-primary text-accent hover:bg-white hover:text-black shadow-md p-4">
     <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 16 16"><path fill="currentColor" d="M15.698 7.287L8.712.302a1.03 1.03 0 0 0-1.457 0l-1.45 1.45l1.84 1.84a1.223 1.223 0 0 1 1.55 1.56l1.773 1.774a1.224 1.224 0 0 1 1.267 2.025a1.226 1.226 0 0 1-2.001-1.334L8.579 5.963v4.353q.177.085.324.231a1.226 1.226 0 1 1-1.332-.267V5.887a1.226 1.226 0 0 1-.666-1.608L5.093 2.465l-4.79 4.79a1.03 1.03 0 0 0 0 1.457l6.986 6.986a1.03 1.03 0 0 0 1.457 0l6.953-6.953a1.03 1.03 0 0 0 0-1.458"/></svg>
   </a>
 </div>
