--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -136,20 +136,18 @@ const site = Astro.site;
       button.remove();
     });
   });
-
 </script>
 
 <header class="header w-full min-h-screen flex flex-col justify-between">
   <div id="particles" class="absolute inset-0 -z-10 bg-secondary"></div>
-  <button id="stop-animation-button" class="absolute right-10 bottom-10 flex flex-row"
-    ><Icon name="material-symbols:pause" class="h-5 w-6" />Stop Animation</button
-  >
   <Navbar />
-  <div class="flex flex-col justify-center h-full py-12">
+  <div class="flex flex-col justify-center h-full py-12 sm:py-4">
     <div
       class="self-center items-center flex flex-col sm:flex-row w-full md:w-5/6 xl:w-2/3 px-4 sm:px-0"
     >
-      <div class="w-full text-center sm:text-left sm:w-1/2 py-12 sm:px-8">
+      <div
+        class="w-full text-center sm:text-left sm:w-1/2 py-12 sm:py-4 sm:px-8"
+      >
         <h1 class="tracking-wide text-primary text-2xl mb-6">
           StashSphere: <span
             class="text-gray-800 font-bold tracking tracking-widest"
@@ -171,12 +169,16 @@ const site = Astro.site;
       </div>
     </div>
   </div>
-  <div class="flex flex-row w-full justify-center pb-12">
+  <div></div>
+  <div class="flex flex-row absolute bottom-2 w-full justify-center items-center">
     <a
       class="px-10 py-2 text-gray-200 bg-accent rounded-full shadow-md text-lg hover:bg-gray-800 hover:border-accent-300"
       href="#about"
     >
       More Information
     </a>
+  </div>
+  <div class="flex flex-row absolute bottom-20 w-full justify-center items-center">
+    <button id="stop-animation-button" class="flex flex-row ml-auto mr-4"><Icon name="material-symbols:pause" class="h-5 w-6" />Stop Animation</button>
   </div>
 </header>
