--- a/src/components/sections/Header.astro
+++ b/src/components/sections/Header.astro
@@ -141,7 +141,7 @@ const site = Astro.site;
 <header class="header w-full min-h-screen flex flex-col justify-between">
   <div id="particles" class="absolute inset-0 -z-10 bg-secondary"></div>
   <Navbar />
-  <div class="flex flex-col justify-center h-full py-12 sm:py-4">
+  <div class="flex flex-col justify-center h-full">
     <div
       class="self-center items-center flex flex-col sm:flex-row w-full md:w-5/6 xl:w-2/3 px-4 sm:px-0"
     >
