style: add shadow to BrowserFrame

--- a/src/components/BrowserFrame.astro
+++ b/src/components/BrowserFrame.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components'
 ---
 
-<div class="flex flex-col border-4 border-gray rounded-md max-w-full mx-auto">
+<div class="flex flex-col border-4 border-gray rounded-md max-w-full mx-auto shadow-xl">
   <div class="flex flex-row border-b-4 justify-end">
     <div class="mr-3 flex flex-row w-16 h-10 justify-between items-center">
         <Icon name="material-symbols:minimize-rounded"/>
