--- a/src/components/sections/GetStarted.astro
+++ b/src/components/sections/GetStarted.astro
@@ -16,6 +16,19 @@ const { title } = Astro.props;
     </h2>
     <div class="font-light text-gray-200 flex flex-col gap-5">
       <div>
+        <h2 class="text-xl font-bold">Checkout the demo</h2>
+        <br />
+        Go to <a
+          class="text-accent font-bold"
+          target="_blank"
+          rel="noopener"
+          href="https://demo.stashsphere.com">demo.stashsphere.com</a
+        >.
+        Create an account and add the user <span class="text-accent font-bold">robot</span> to as a friend and
+        wait until your friend request is accepted.
+        The demo instance resets every few days.
+      </div>
+      <div>
         <h2 class="text-xl font-bold">Read the documentation</h2>
         Learn how use StashSphere and run your own instance.<br />
         Go to <a
