fix: center content in BrowserFrame

--- a/src/components/BrowserFrame.astro
+++ b/src/components/BrowserFrame.astro
@@ -10,7 +10,7 @@ import { Icon } from 'astro-icon/components'
         <Icon name="material-symbols:close-rounded" />
     </div>
   </div>
-  <div class="p-1">
+  <div class="p-1 mx-auto">
     <slot />
   </div>
 </div>
