feat: add links to matrix channel

--- a/src/components/sections/GetStarted.astro
+++ b/src/components/sections/GetStarted.astro
@@ -47,6 +47,16 @@ const { title } = Astro.props;
           href="https://github.com/stashsphere">github.com/stashsphere</a
         >
       </div>
+      <div>
+        <h2 class="text-xl font-bold">Community</h2>
+        Join the matrix channel:
+        <a
+          class="text-accent font-bold"
+          target="_blank"
+          rel="noopener"
+          href="https://matrix.to/#/#stashsphere:matrix.org">#stashsphere:matrix.org</a
+        >
+      </div>
     </div>
   </div>
 </div>
