style: PascalCase for name

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -21,7 +21,7 @@ const getStartedLink = isHome
       <div class="flex items-center">
         <img src={`${site}/img/stashsphere-logo.svg`} alt="StashSphere" class="h-12" />
       </div>
-      <span class="py-4 px-2 text-primary font-goldman font-bold text-xl">stashsphere</span>
+      <span class="py-4 px-2 text-primary font-goldman font-bold text-xl">StashSphere</span>
     </div>
     </a>
     <button id="menuBtn" class="hamburger block sm:hidden focus:outline-none" type="button" onclick="navToggle();" aria-label="Show Menu">
