--- a/src/components/sections/GetStarted.astro
+++ b/src/components/sections/GetStarted.astro
@@ -24,7 +24,7 @@ const { title } = Astro.props;
           rel="noopener"
           href="https://demo.stashsphere.com">demo.stashsphere.com</a
         >.
-        Create an account and add the user <span class="text-accent font-bold">robot</span> to as a friend and
+        Create an account and add the user <span class="text-accent font-bold">robot</span> as a friend and
         wait until your friend request is accepted.
         The demo instance resets every few days.
       </div>
